image-app/azure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-processor
  labels:
    name: image-processor
    environment: production
